# PEPlayer

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/panoeye/peplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: frag.sh  vertex.sh
app/src/main/cpp/: Common.h  GLManager.cpp  GLManager.h  GLMatrix.cpp  GLMatrix.h  MainController.cpp  MainController.h  com_panoeye_pano_JNIServerLib.cpp  com_panoeye_pano_JNIServerLib.h  native-lib.cpp  timeb.h
app/src/main/cpp/Online/: OnlineDecoder.cpp  OnlineDecoder.h  OnlinePano.cpp  OnlinePano.h
app/src/main/cpp/OnlineSDK/: PanoDef.h  PanoDef原.h  SysComm.cpp  type.h
app/src/main/cpp/OnlineSDK/CClient/: CClient.cpp  CClient.h  ClientListener.h  MemoryPool.cpp  MemoryPool.h  NBSocketClient.cpp  NBSocketClient.h
app/src/main/cpp/OnlineSDK/PEClientSDK/: PEClient.cpp  PEClient.h  PEClientSDK.cpp  PEClientSDK.h
app/src/main/cpp/OnlineSDK/PEClientSDK/非项目文件/: PEClientSDK0.h  PEClientSDK原.cpp  编辑1  编辑2
app/src/main/cpp/OnlineSDK/XML/: XmlRpcTX2Util.cpp  XmlRpcTX2Util.h  XmlRpcTX2Value.cpp  XmlRpcTX2Value.h  base64.h
app/src/main/cpp/OnlineSDK/md5/: md5.cpp  md5.h
app/src/main/cpp/PER/: PERBinFile.cpp  PERBinFile.h  PERDecoder.cpp  PERDecoder.h  PERFile.cpp  PERFile.h  PERPackage.cpp  PERPackage.h  PERPano.cpp  PERPano.h
app/src/main/cpp/PER/zip/: ZipLibUtil.cpp  ZipLibUtil.h
app/src/main/cpp/PES/: PESBinFile.cpp  PESBinFile.h  PESDecoder.cpp  PESDecoder.h  PESFile.cpp  PESFile.h  PESPano.cpp  PESPano.h
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/xrapi/: XrApi.h  XrApiConfig.h  XrApiHelpers.h  XrApiSystemUtils.h  XrApiTypes.h  XrApiVersion.h
app/src/main/java/com/panoeye/peplayer/: ConnectPage.java  JNIServerLib.java  ListVideo.java  LoadingActivity.java  MainActivity.java  OnlineListActivity.java  OnlinePlayActivity.java  OnlineServiceSettingActivity.java  OnlineUserSettingActivity.java  PlayAV.java  PlayAVS.java  PlayOnline.java  VideoItem.java  VideoItemAdapter.java
app/src/main/java/com/panoeye/peplayer/map/: BMap.java  BaseMapDemo.java  Camera.java  LocationDemo.java  MapControlDemo.java  OfflineDemo.java  OverlayDemo.java  PanoMap.java  ParseXML.java
app/src/main/java/com/panoeye/peplayer/peonline/: Ball.java  ConnectManager.java  FEDraw.java  FERender.java  FishEyeCfgActivity.java  FishEyeDrawActivity.java  RawRenderer.java
app/src/main/res/drawable/: button_shape_bar.xml  button_shape_blue.xml  button_shape_pink.xml  play_ctrl_background.xml
app/src/main/res/layout/: activity_connect_page.xml  activity_draw_fisheye.xml  activity_fisheye_cfg.xml  activity_list_video.xml  activity_loading.xml  activity_location.xml  activity_main.xml  activity_onlinelist.xml  activity_onlineplay.xml  activity_onlineservicesetting.xml  activity_onlineusersetting.xml  activity_play_av.xml  activity_play_av_pes.xml  activity_play_online.xml  layout_main.xml  layout_map_item.xml  layout_nav_head.xml  video_item.xml  video_item_pes.xml
app/src/main/res/menu/: drawer_menu.xml
app/src/main/res/raw/: frag.glsl  pe_frag.glsl  pe_vertex.glsl  vertex.glsl
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: cameramap.xml
app/src/test/java/com/panoeye/peplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
pelibrary/: build.gradle  proguard-rules.pro
pelibrary/src/androidTest/java/panoeye/pelibrary/: ExampleInstrumentedTest.java
pelibrary/src/main/: AndroidManifest.xml
pelibrary/src/main/java/panoeye/pelibrary/: Define.java  FileSeekFlag.java  FloatBufferInit.java  FrameType.java  LockWrap.java  MapThrowWrap.java  PEBinFile.java  PEBinFileInfo.java  PECameraConfig.java  PECmbFile.java  PEColorTune.java  PEDecodeBuffer.java  PEDecodeManager.java  PEDecodeManagerStatus.java  PEDecodeThread.java  PEDecoder.java  PEError.java  PEErrorType.java  PEFile.java  PEFrameBuffer.java  PEManager.java  PEMatrix.java  PERFile.java  PERModule.java  PERPano.java  PERenderer.java  PERendererGain.java  PERendererOnline.java  PESDecodeManager.java  PESDecodeThread.java  PESFile.java  PESPano.java  PESVideoPacket.java  PESquare.java  PESurfaceView.java  PEVideoPacket.java  PEVideoTexture.java  Pano.java  PanoHandle.java  PanoType.java  (+8 more)
pelibrary/src/main/res/values/: strings.xml
pelibrary/src/test/java/panoeye/pelibrary/: ExampleUnitTest.java
